projet_gl/src/test/deca/syntax/valid/print/printString.deca
// Description:
//    test parser for print.
//
// Resultats:
//    `> [17, 0] Program
//       +> ListDeclClass [List with 0 elements]
//       `> [17, 0] Main
//          +> ListDeclVar [List with 0 elements]
//          `> ListInst [List with 1 elements]
//             []> [18, 4] Print
//                 `> ListExpr [List with 1 elements]
//                    []> [18, 10] StringLiteral (string)
//
// Historique:
//    cree le 14/01/2024

{
    print("string");
}